--- a/webserver/.gitignore
+++ b/webserver/.gitignore
@@ -18,7 +18,7 @@ media
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff:
-../.idea/workspace.xml
+.idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/dictionaries
 
@@ -75,48 +75,4 @@ fabric.properties
 # Sonarlint plugin
 .idea/sonarlint
 
-# ignore all .idea
-.idea/
 # End of https://www.gitignore.io/api/django,pycharm
-
-# See http://help.github.com/ignore-files/ for more about ignoring files.
-
-# compiled output
-/dist
-/tmp
-/out-tsc
-
-# dependencies
-/node_modules
-
-# IDEs and editors
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
-
-# IDE - VSCode
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-
-# misc
-/.sass-cache
-/connect.lock
-/coverage
-/libpeerconnection.log
-npm-debug.log
-testem.log
-/typings
-
-# e2e
-/e2e/*.js
-/e2e/*.map
-
-# System Files
-.DS_Store
-Thumbs.db
