--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,21 @@
+sudo: false
+dist: trusty
 language: node_js
 node_js:
-  - "7"
-script: echo "pass"
+  - "8.4.0"
+
+cache:
+  yarn: true
+  directories:
+    - ./frontend-webapp/node_modules
+
+before_install:
+  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.0.1
+  - export PATH=$HOME/.yarn/bin:$PATH
+
+install:
+  - cd frontend-webapp && yarn install
+
+script:
+  - cd frontend-webapp && yarn test --single-run --no-progress --browser=ChromeHeadless
+  - cd frontend-webapp && yarn e2e --no-progress --config=protractor-ci.conf.js
