--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,8 @@ before_install:
   - export PATH=$HOME/.yarn/bin:$PATH
 
 install:
-  - cd frontend-webapp && yarn install
+  - (cd frontend-webapp && yarn install)
 
 script:
-  - cd frontend-webapp && yarn test --single-run --no-progress --browser=ChromeHeadless
-  - cd frontend-webapp && yarn e2e --no-progress --config=protractor-ci.conf.js
+  - (cd frontend-webapp && yarn test --single-run --no-progress --browser=ChromeHeadless)
+  - (cd frontend-webapp && yarn e2e --no-progress --config=protractor-ci.conf.js)
