Add proxy config

--- a/frontend-webapp/package.json
+++ b/frontend-webapp/package.json
@@ -4,11 +4,11 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy-config.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e --proxy-config proxy-config.json"
   },
   "private": true,
   "dependencies": {
