--- a/frontend-webapp/package.json
+++ b/frontend-webapp/package.json
@@ -12,26 +12,26 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "5.0.0-beta.6",
-    "@angular/common": "5.0.0-beta.6",
-    "@angular/compiler": "5.0.0-beta.6",
-    "@angular/core": "5.0.0-beta.6",
-    "@angular/forms": "5.0.0-beta.6",
-    "@angular/http": "5.0.0-beta.6",
-    "@angular/platform-browser": "5.0.0-beta.6",
-    "@angular/platform-browser-dynamic": "5.0.0-beta.6",
-    "@angular/router": "5.0.0-beta.6",
+    "@angular/animations": "5.0.0-rc.1",
+    "@angular/common": "5.0.0-rc.1",
+    "@angular/compiler": "5.0.0-rc.1",
+    "@angular/core": "5.0.0-rc.1",
+    "@angular/forms": "5.0.0-rc.1",
+    "@angular/http": "5.0.0-rc.1",
+    "@angular/platform-browser": "5.0.0-rc.1",
+    "@angular/platform-browser-dynamic": "5.0.0-rc.1",
+    "@angular/router": "5.0.0-rc.1",
     "core-js": "^2.4.1",
     "rxjs": "^5.4.2",
-    "zone.js": "^0.8.14"
+    "zone.js": "^0.8.18"
   },
   "devDependencies": {
-    "@angular/cli": "1.4.1",
-    "@angular/compiler-cli": "5.0.0-beta.6",
-    "@angular/language-service": "5.0.0-beta.6",
+    "@angular/cli": "1.4.5",
+    "@angular/compiler-cli": "5.0.0-rc.1",
+    "@angular/language-service": "5.0.0-rc.1",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~8.0.28",
+    "@types/node": "~8.0.32",
     "codelyzer": "~3.1.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -44,6 +44,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.3.0",
     "tslint": "~5.7.0",
-    "typescript": "~2.5.2"
+    "typescript": "~2.5.3"
   }
 }
