--- a/frontend-webapp/package.json
+++ b/frontend-webapp/package.json
@@ -7,7 +7,7 @@
     "start": "ng serve --proxy-config proxy-config.json",
     "build": "ng build",
     "test": "ng test",
-    "lint": "ng lint",
+    "lint": "ng lint --type-check",
     "e2e": "ng e2e --proxy-config proxy-config.json"
   },
   "private": true,
