Add noUnusedLocals rule

--- a/frontend-webapp/tsconfig.json
+++ b/frontend-webapp/tsconfig.json
@@ -6,6 +6,7 @@
     "declaration": false,
     "moduleResolution": "node",
     "strict": true,
+    "noUnusedLocals": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es5",
