--- a/frontend-webapp/package.json
+++ b/frontend-webapp/package.json
@@ -12,28 +12,28 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "5.0.0-rc.3",
-    "@angular/common": "5.0.0-rc.3",
-    "@angular/compiler": "5.0.0-rc.3",
-    "@angular/core": "5.0.0-rc.3",
-    "@angular/forms": "5.0.0-rc.3",
-    "@angular/http": "5.0.0-rc.3",
-    "@angular/platform-browser": "5.0.0-rc.3",
-    "@angular/platform-browser-dynamic": "5.0.0-rc.3",
-    "@angular/router": "5.0.0-rc.3",
+    "@angular/animations": "5.0.0",
+    "@angular/common": "5.0.0",
+    "@angular/compiler": "5.0.0",
+    "@angular/core": "5.0.0",
+    "@angular/forms": "5.0.0",
+    "@angular/http": "5.0.0",
+    "@angular/platform-browser": "5.0.0",
+    "@angular/platform-browser-dynamic": "5.0.0",
+    "@angular/router": "5.0.0",
     "bootstrap": "4.0.0-beta.2",
     "core-js": "^2.5.1",
-    "rxjs": "^5.5.0",
+    "rxjs": "^5.5.2",
     "zone.js": "^0.8.18"
   },
   "devDependencies": {
-    "@angular/cli": "1.4.9",
-    "@angular/compiler-cli": "5.0.0-rc.3",
-    "@angular/language-service": "5.0.0-rc.3",
-    "@types/jasmine": "~2.6.0",
+    "@angular/cli": "1.5.0",
+    "@angular/compiler-cli": "5.0.0",
+    "@angular/language-service": "5.0.0",
+    "@types/jasmine": "~2.6.2",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~8.0.46",
-    "codelyzer": "~3.2.1",
+    "@types/node": "~8.0.47",
+    "codelyzer": "~4.0.0",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.0",
@@ -45,6 +45,6 @@
     "protractor": "~5.2.0",
     "ts-node": "~3.3.0",
     "tslint": "~5.8.0",
-    "typescript": "~2.5.3"
+    "typescript": "~2.6.1"
   }
 }
