--- a/webserver/Dockerfile
+++ b/webserver/Dockerfile
@@ -5,8 +5,8 @@ RUN apt-get update && apt-get install -f -y postgresql-client
 RUN mkdir /webserver
 
 WORKDIR /webserver
-ADD ./webserver/requirements.txt /webserver/
+ADD requirements.txt /webserver/
 RUN pip install -r requirements.txt
 
-ADD ./webserver/docker_entrypoint.sh /webserver/
+ADD docker_entrypoint.sh /webserver/
 ENTRYPOINT ["/webserver/docker_entrypoint.sh"]
