--- a/frontend-webapp/package.json
+++ b/frontend-webapp/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --aot --proxy-config proxy-config.json",
+    "start": "ng serve --aot --proxy-config proxy-config.json --host 0.0.0.0",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint --type-check",
