Fix CI to use Docker for frontend-webapp

--- a/frontend-webapp/proxy-config.json
+++ b/frontend-webapp/proxy-config.json
@@ -1,7 +1,7 @@
 {
   "/api": {
-    "target": "http://localhost:8000",
-    "changeOrigin": true,
+    "target": "http://api:8000",
+    "changeOrigin": false,
     "pathRewrite": {
       "^/api": ""
     }
