--- a/frontend-webapp/package.json
+++ b/frontend-webapp/package.json
@@ -7,8 +7,10 @@
     "start": "ng serve --aot --proxy-config proxy-config.json --host 0.0.0.0",
     "build": "ng build",
     "test": "ng test",
+    "test:ci": "ng test --single-run --no-progress --browser=ChromeCI",
     "lint": "ng lint --type-check",
-    "e2e": "ng e2e --proxy-config proxy-config.json"
+    "e2e": "ng e2e --proxy-config proxy-config.json",
+    "e2e:ci": "yarn e2e --no-progress --config=protractor-ci.conf.js"
   },
   "private": true,
   "dependencies": {
@@ -43,6 +45,7 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.2.0",
+    "puppeteer": "^0.12.0",
     "ts-node": "~3.3.0",
     "tslint": "~5.8.0",
     "typescript": "~2.4.2"
