--- a/.travis.yml
+++ b/.travis.yml
@@ -26,3 +26,4 @@ script:
   - $TRAVIS_BUILD_DIR/scripts/loop-ping-server.sh
   - docker-compose exec frontend_webapp yarn e2e:ci
   - docker-compose exec frontend_webapp yarn lint
+  - docker-compose logs
