--- a/frontend-webapp/package.json
+++ b/frontend-webapp/package.json
@@ -15,6 +15,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "5.0.1",
+    "@angular/cdk": "5.0.0-rc0",
     "@angular/common": "5.0.1",
     "@angular/compiler": "5.0.1",
     "@angular/core": "5.0.1",
