--- a/frontend-webapp/package.json
+++ b/frontend-webapp/package.json
@@ -26,6 +26,7 @@
     "@angular/router": "5.0.2",
     "bootstrap": "4.0.0-beta.2",
     "core-js": "^2.5.1",
+    "flatpickr": "^4.1.2",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.18"
   },
