--- a/frontend-webapp/.vscode/launch.json
+++ b/frontend-webapp/.vscode/launch.json
@@ -7,9 +7,9 @@
     {
       "type": "chrome",
       "request": "launch",
-      "name": "Launch Chrome against localhost",
+      "name": "Launch Chrome",
       "url": "http://localhost:4200",
-      "webRoot": "${workspaceFolder}/frontend-webapp"
+      "webRoot": "${workspaceFolder}"
     }
   ]
 }
