--- a/frontend-webapp/.vscode/settings.json
+++ b/frontend-webapp/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
   "prettier.printWidth": 100,
-  "prettier.singleQuote": true
+  "prettier.singleQuote": true,
+  "editor.rulers": [
+    100
+  ]
 }
