Exclude coverage folder

--- a/frontend-webapp/.vscode/settings.json
+++ b/frontend-webapp/.vscode/settings.json
@@ -3,5 +3,9 @@
   "prettier.singleQuote": true,
   "editor.rulers": [
     100
-  ]
+  ],
+  "search.exclude": {
+    "**/node_modules": true,
+    "**/coverage": true
+  }
 }
