--- a/frontend-webapp/package.json
+++ b/frontend-webapp/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "5.0.3",
     "@angular/router": "5.0.3",
     "bootstrap": "4.0.0-beta.2",
+    "cleave.js": "^1.0.7",
     "core-js": "^2.5.1",
     "flatpickr": "^4.1.2",
     "rxjs": "^5.5.2",
